likes and shares countView fixed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linearLayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="8dp">
+
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_width="@dimen/post_avatar_size"
+        android:layout_height="@dimen/post_avatar_size"
+        android:src="@drawable/ic_launcher_foreground"
+        app:srcCompat ="@drawable/ic_launcher_foreground"
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_launcher_foreground"
+        android:contentDescription="@string/netology_avatar" />
+
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintTop_toTopOf="@id/avatar"
+        app:layout_constraintBottom_toTopOf="@id/published"
+        app:layout_constraintEnd_toStartOf="@id/more_button"
+        android:layout_marginStart="@dimen/common_margin_spacing"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="@string/author"
+        />
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/avatar"
+        app:layout_constraintTop_toBottomOf="@id/author"
+        app:layout_constraintBottom_toBottomOf="@id/avatar"
+        app:layout_constraintEnd_toStartOf="@id/more_button"
+        android:layout_marginStart="@dimen/common_margin_spacing"
+        android:id="@+id/published"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:text="@string/published"
+
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:id="@+id/post_text"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/header_barrier"
+        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:text="@string/post_text"
+        android:ellipsize="end"
+        />
+
+    <ImageButton
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/author"
+        app:layout_constraintBottom_toBottomOf="@id/published"
+        android:src="@drawable/ic_baseline_more_vert_24"
+        app:srcCompat="@drawable/ic_baseline_more_vert_24"
+        android:visibility="visible"
+        android:id="@+id/more_button"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/show_more_button" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/header_barrier"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="avatar,published,more_button"
+        />
+    <androidx.constraintlayout.widget.Barrier
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/post_text_barrier"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="post_text"
+        />
+    <ImageButton
+        android:id="@+id/like_icon"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:src="@drawable/ic_like_border_24"
+        android:visibility="visible"
+        android:background="@android:color/transparent"
+        tools:src="@drawable/ic_like_border_24"
+        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
+        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:contentDescription="@string/like_icon"
+        />
+    <TextView
+        android:id="@+id/like_count_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/like_icon"
+        app:layout_constraintBottom_toBottomOf="@id/like_icon"
+        app:layout_constraintStart_toEndOf="@id/like_icon"
+        android:layout_marginStart="@dimen/text_to_icon_margin"
+        android:text= "@string/like_count"
+        android:ellipsize="end"
+        android:singleLine="true"
+        />
+
+    <ImageButton
+        android:id="@+id/comment_icon"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:src="@drawable/ic_comment_mode_24"
+        android:visibility="visible"
+        tools:src="@drawable/ic_comment_mode_24"
+        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
+        app:layout_constraintStart_toEndOf="@id/like_icon"
+        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:layout_marginStart="@dimen/icons_margin_spacing"
+        android:contentDescription="@string/comment_icon"
+        />
+    <TextView
+        android:id="@+id/comment_count_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/comment_icon"
+        app:layout_constraintBottom_toBottomOf="@id/comment_icon"
+        app:layout_constraintStart_toEndOf="@id/comment_icon"
+        android:layout_marginStart="@dimen/text_to_icon_margin"
+        android:text="@string/comments_count"
+        android:ellipsize="end"
+        android:singleLine="true"
+        />
+    <ImageButton
+        android:id="@+id/share_icon"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:src="@drawable/ic_share_24"
+        android:visibility="visible"
+        tools:src="@drawable/ic_share_24"
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
+        app:layout_constraintStart_toEndOf="@id/comment_icon"
+        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:layout_marginStart="@dimen/icons_margin_spacing"
+        android:contentDescription="@string/reply_icon"
+        />
+    <TextView
+        android:id="@+id/share_count_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/share_icon"
+        app:layout_constraintBottom_toBottomOf="@id/share_icon"
+        app:layout_constraintStart_toEndOf="@id/share_icon"
+        android:layout_marginStart="@dimen/text_to_icon_margin"
+        android:text="@string/share_count"
+        android:ellipsize="end"
+        android:singleLine="true"
+        />
+    <ImageView
+        android:id="@+id/visibility_icon"
+        android:layout_width="@dimen/icon_size"
+        android:layout_height="@dimen/icon_size"
+        android:src="@drawable/ic_visibility_24"
+        tools:src="@drawable/ic_visibility_24"
+        android:layout_marginTop="@dimen/common_margin_spacing"
+        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
+        app:layout_constraintEnd_toStartOf="@id/visibility_count_text"
+        android:contentDescription="@string/visibility_icon"
+        android:layout_marginEnd="@dimen/common_margin_spacing"
+        />
+    <TextView
+        android:id="@+id/visibility_count_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/visibility_icon"
+        app:layout_constraintBottom_toBottomOf="@id/visibility_icon"
+        android:layout_marginEnd="@dimen/common_margin_spacing"
+        android:text="@string/visibility_count"
+        android:ellipsize="end"
+        android:singleLine="true"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
