--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/post_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/common_margin_spacing">
+    android:padding="@dimen/common_spacing">
 
     <ImageView
         android:id="@+id/avatar"
@@ -25,8 +26,8 @@
         app:layout_constraintStart_toEndOf="@id/avatar"
         app:layout_constraintTop_toTopOf="@id/avatar"
         app:layout_constraintBottom_toTopOf="@id/published"
-        app:layout_constraintEnd_toStartOf="@id/more_button"
-        android:layout_marginStart="@dimen/common_margin_spacing"
+        app:layout_constraintEnd_toStartOf="@id/post_menu"
+        android:layout_marginStart="@dimen/common_spacing"
         android:ellipsize="end"
         android:singleLine="true"
         android:text="@string/author"
@@ -39,8 +40,8 @@
         app:layout_constraintStart_toEndOf="@id/avatar"
         app:layout_constraintTop_toBottomOf="@id/author"
         app:layout_constraintBottom_toBottomOf="@id/avatar"
-        app:layout_constraintEnd_toStartOf="@id/more_button"
-        android:layout_marginStart="@dimen/common_margin_spacing"
+        app:layout_constraintEnd_toStartOf="@id/post_menu"
+        android:layout_marginStart="@dimen/common_spacing"
         android:ellipsize="end"
         android:singleLine="true"
         android:text="@string/published"
@@ -52,30 +53,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/header_barrier"
-        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:layout_marginTop="@dimen/common_spacing"
         android:text="@string/post_text"
         android:ellipsize="end"
         />
 
     <ImageButton
-        android:id="@+id/more_button"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:id="@+id/post_menu"
+        android:layout_width="19dp"
+        android:layout_height="20dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/description_post_menu_button"
+        android:src="@drawable/ic_baseline_more_vert_24"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@id/published"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/author"
-        app:layout_constraintBottom_toBottomOf="@id/published"
-        android:src="@drawable/ic_baseline_more_vert_24"
-        app:srcCompat="@drawable/ic_baseline_more_vert_24"
-        android:visibility="visible"
-        android:background="@android:color/transparent"
-        android:contentDescription="@string/show_more_button" />
+        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/header_barrier"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="avatar,published,more_button"
+        app:constraint_referenced_ids="avatar,published,post_text"
         />
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/post_text_barrier"
@@ -94,8 +95,8 @@
         tools:src="@drawable/ic_like_border_24"
         app:srcCompat="@drawable/ic_like_border_24"
         app:layout_constraintTop_toTopOf="@id/post_text_barrier"
-        android:layout_marginTop="@dimen/common_margin_spacing"
-        android:contentDescription="@string/like_icon"
+        android:layout_marginTop="@dimen/common_spacing"
+        android:contentDescription="@string/description_post_like"
         />
     <TextView
         android:id="@+id/like_count_text"
@@ -119,9 +120,9 @@
         tools:src="@drawable/ic_comment_mode_24"
         app:layout_constraintTop_toTopOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/like_icon"
-        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginStart="@dimen/icons_margin_spacing"
-        android:contentDescription="@string/comment_icon"
+        android:contentDescription="@string/description_post_comment"
         />
     <TextView
         android:id="@+id/comment_count_text"
@@ -145,9 +146,9 @@
         android:background="@android:color/transparent"
         app:layout_constraintTop_toTopOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/comment_icon"
-        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:layout_marginTop="@dimen/common_spacing"
         android:layout_marginStart="@dimen/icons_margin_spacing"
-        android:contentDescription="@string/reply_icon"
+        android:contentDescription="@string/description_post_share"
         />
     <TextView
         android:id="@+id/share_count_text"
@@ -167,11 +168,11 @@
         android:layout_height="@dimen/icon_size"
         android:src="@drawable/ic_visibility_24"
         tools:src="@drawable/ic_visibility_24"
-        android:layout_marginTop="@dimen/common_margin_spacing"
+        android:layout_marginTop="@dimen/common_spacing"
         app:layout_constraintTop_toTopOf="@id/post_text_barrier"
         app:layout_constraintEnd_toStartOf="@id/visibility_count_text"
-        android:contentDescription="@string/visibility_icon"
-        android:layout_marginEnd="@dimen/common_margin_spacing"
+        android:contentDescription="@string/description_post_visibility"
+        android:layout_marginEnd="@dimen/common_spacing"
         />
     <TextView
         android:id="@+id/visibility_count_text"
@@ -180,7 +181,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/visibility_icon"
         app:layout_constraintBottom_toBottomOf="@id/visibility_icon"
-        android:layout_marginEnd="@dimen/common_margin_spacing"
+        android:layout_marginEnd="@dimen/common_spacing"
         android:text="@string/visibility_count"
         android:ellipsize="end"
         android:singleLine="true"
