--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="common_margin_spacing">8dp</dimen>
+    <dimen name="common_spacing">8dp</dimen>
     <dimen name="icons_margin_spacing">48dp</dimen>
     <dimen name="post_avatar_size">48dp</dimen>
     <dimen name="icon_size">24dp</dimen>
