--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/post_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/common_spacing">
+    android:padding="@dimen/common_spacing"
+    app:layout_constraintCircleRadius="10dp">
+
 
     <ImageView
         android:id="@+id/avatar"
@@ -85,106 +88,54 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="post_text"
         />
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/like_icon"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:src="@drawable/ic_like_border_24"
-        android:visibility="visible"
-        android:background="@android:color/transparent"
-        tools:src="@drawable/ic_like_border_24"
-        app:srcCompat="@drawable/ic_like_border_24"
-        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
-        android:layout_marginTop="@dimen/common_spacing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppTheme.LikeCheckbox"
+        android:checkable="true"
+        tools:checked = "@sample/posts.json/data/likedByMe"
+        tools:text="@sample/posts.json/data/likes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         android:contentDescription="@string/description_post_like"
         />
-    <TextView
-        android:id="@+id/like_count_text"
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/comment_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/like_icon"
-        app:layout_constraintBottom_toBottomOf="@id/like_icon"
+        style="@style/Widget.AppTheme.CommentButton"
+        android:checkable="true"
+        android:text="78"
+        app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/like_icon"
-        android:layout_marginStart="@dimen/text_to_icon_margin"
-        android:text= "@string/like_count"
-        android:ellipsize="end"
-        android:singleLine="true"
-        />
-
-    <ImageButton
-        android:id="@+id/comment_icon"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:src="@drawable/ic_comment_mode_24"
-        android:visibility="visible"
-        tools:src="@drawable/ic_comment_mode_24"
-        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
-        app:layout_constraintStart_toEndOf="@id/like_icon"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:layout_marginStart="@dimen/icons_margin_spacing"
         android:contentDescription="@string/description_post_comment"
         />
-    <TextView
-        android:id="@+id/comment_count_text"
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/share_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/comment_icon"
-        app:layout_constraintBottom_toBottomOf="@id/comment_icon"
+        style="@style/Widget.AppTheme.ShareButton"
+        android:checkable="true"
+        android:text="999"
+        app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/comment_icon"
-        android:layout_marginStart="@dimen/text_to_icon_margin"
-        android:text="@string/comments_count"
-        android:ellipsize="end"
-        android:singleLine="true"
-        />
-    <ImageButton
-        android:id="@+id/share_icon"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:src="@drawable/ic_share_24"
-        android:visibility="visible"
-        tools:src="@drawable/ic_share_24"
-        android:background="@android:color/transparent"
-        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
-        app:layout_constraintStart_toEndOf="@id/comment_icon"
-        android:layout_marginTop="@dimen/common_spacing"
-        android:layout_marginStart="@dimen/icons_margin_spacing"
         android:contentDescription="@string/description_post_share"
         />
-    <TextView
-        android:id="@+id/share_count_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/share_icon"
-        app:layout_constraintBottom_toBottomOf="@id/share_icon"
-        app:layout_constraintStart_toEndOf="@id/share_icon"
-        android:layout_marginStart="@dimen/text_to_icon_margin"
-        android:text="@string/share_count"
-        android:ellipsize="end"
-        android:singleLine="true"
-        />
-    <ImageView
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/visibility_icon"
-        android:layout_width="@dimen/icon_size"
-        android:layout_height="@dimen/icon_size"
-        android:src="@drawable/ic_visibility_24"
-        tools:src="@drawable/ic_visibility_24"
-        android:layout_marginTop="@dimen/common_spacing"
-        app:layout_constraintTop_toTopOf="@id/post_text_barrier"
-        app:layout_constraintEnd_toStartOf="@id/visibility_count_text"
-        android:contentDescription="@string/description_post_visibility"
-        android:layout_marginEnd="@dimen/common_spacing"
-        />
-    <TextView
-        android:id="@+id/visibility_count_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/Widget.AppTheme.VisibilityButton."
+        android:checkable="true"
+        android:text="12,4K"
+        app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/visibility_icon"
-        app:layout_constraintBottom_toBottomOf="@id/visibility_icon"
-        android:layout_marginEnd="@dimen/common_spacing"
-        android:text="@string/visibility_count"
-        android:ellipsize="end"
-        android:singleLine="true"
+        android:contentDescription="@string/description_post_visibility"
         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
