--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="post_avatar_size">48dp</dimen>
     <dimen name="icon_size">24dp</dimen>
     <dimen name="text_to_icon_margin">8dp</dimen>
+    <dimen name="icon_button_min_size">48dp</dimen>
+
 </resources>
