--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.NMedia" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.NMedia" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+<!--        Status bar color.-->
         <item name="android:statusBarColor">@color/purple_700</item>
+<!--        Primary brand color. -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/white</item>
+<!--        Secondary brand color.-->
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+
     </style>
+
+    <style name="Widget.AppTheme.LikeCheckbox" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="icon">@drawable/ic_liked_24dp</item>
+        <item name="android:textColor">@color/icon_text_color</item>
+        <item name="iconTint">@color/like_checkbox_tint</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="backgroundTint">@color/checkbox_background_tint</item>
+    </style>
+
+    <style name="Widget.AppTheme.CommentButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="icon">@drawable/ic_comment_mode_24</item>
+        <item name="android:textColor">@color/icon_text_color</item>
+        <item name="iconTint">@color/comment_checkbox_tint</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="backgroundTint">@color/checkbox_background_tint</item>
+    </style>
+
+    <style name="Widget.AppTheme.ShareButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="icon">@drawable/ic_share_24</item>
+        <item name="android:textColor">@color/icon_text_color</item>
+        <item name="iconTint">@color/share_checkbox_tint</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="backgroundTint">@color/checkbox_background_tint</item>
+    </style>
+
+    <style name="Widget.AppTheme.VisibilityButton." parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="icon">@drawable/ic_visibility_24</item>
+        <item name="android:textColor">@color/icon_text_color</item>
+        <item name="iconTint">@color/visibility_checkbox_tint</item>
+        <item name="android:minWidth">@dimen/icon_button_min_size</item>
+        <item name="android:minHeight">@dimen/icon_button_min_size</item>
+        <item name="backgroundTint">@color/checkbox_background_tint</item>
+    </style>
+
 </resources>
