--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -61,18 +62,17 @@
         android:ellipsize="end"
         />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/post_menu"
-        android:layout_width="19dp"
-        android:layout_height="20dp"
-        android:background="@android:color/transparent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/description_post_menu_button"
-        android:src="@drawable/ic_baseline_more_vert_24"
-        android:visibility="visible"
+        style="@style/Widget.AppTheme.PostMenuCheckbox"
+        android:checkable="true"
         app:layout_constraintBottom_toBottomOf="@id/published"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/author"
-        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
+        />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/header_barrier"
@@ -89,6 +89,7 @@
         app:constraint_referenced_ids="post_text"
         />
     <com.google.android.material.button.MaterialButton
+
         android:id="@+id/like_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -96,6 +97,8 @@
         android:checkable="true"
         tools:checked = "@sample/posts.json/data/likedByMe"
         tools:text="@sample/posts.json/data/likes"
+        android:textSize="15sp"
+        android:paddingLeft="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         android:contentDescription="@string/description_post_like"
@@ -108,6 +111,8 @@
         style="@style/Widget.AppTheme.CommentButton"
         android:checkable="true"
         android:text="78"
+        android:textSize="15sp"
+        android:paddingLeft="0dp"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/like_icon"
         android:contentDescription="@string/description_post_comment"
@@ -120,6 +125,8 @@
         style="@style/Widget.AppTheme.ShareButton"
         android:checkable="true"
         android:text="999"
+        android:textSize="15sp"
+        android:paddingLeft="0dp"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/comment_icon"
         android:contentDescription="@string/description_post_share"
@@ -132,6 +139,8 @@
         style="@style/Widget.AppTheme.VisibilityButton."
         android:checkable="true"
         android:text="12,4K"
+        android:textSize="15sp"
+        android:paddingLeft="0dp"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/description_post_visibility"
