--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -98,7 +98,7 @@
         tools:checked = "@sample/posts.json/data/likedByMe"
         tools:text="@sample/posts.json/data/likes"
         android:textSize="15sp"
-        android:paddingLeft="0dp"
+        android:paddingStart="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         android:contentDescription="@string/description_post_like"
@@ -112,7 +112,6 @@
         android:checkable="true"
         android:text="78"
         android:textSize="15sp"
-        android:paddingLeft="0dp"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/like_icon"
         android:contentDescription="@string/description_post_comment"
@@ -126,7 +125,6 @@
         android:checkable="true"
         android:text="999"
         android:textSize="15sp"
-        android:paddingLeft="0dp"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintStart_toEndOf="@id/comment_icon"
         android:contentDescription="@string/description_post_share"
@@ -140,7 +138,6 @@
         android:checkable="true"
         android:text="12,4K"
         android:textSize="15sp"
-        android:paddingLeft="0dp"
         app:layout_constraintTop_toBottomOf="@id/post_text_barrier"
         app:layout_constraintEnd_toEndOf="parent"
         android:contentDescription="@string/description_post_visibility"
