--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,22 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/tools_Top_Barrier"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintBottom_toTopOf="@id/tools_Top_Barrier"
         tools:layout_editor_absoluteX="81dp"
         tools:listitem="@layout/post" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/description_post_save"
+        app:layout_constraintBottom_toBottomOf="@id/tools_Top_Barrier"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_add_36"
+        />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/tools_Top_Barrier"
